Attempt to fix grid layout issue on iOS Safari
Grid layout breaks on iOS Safari on iPads. Added a wrapper div to the ul tag and added a display: grid to the div

--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -10,10 +10,16 @@
 .skills__inner {
   @include flex(column, center, center);
   @include fullWidthHeight;
+}
+
+.skills-list {
+  @include fullWidthHeight;
+  display: -ms-grid;
+  display: grid;
 
   ul {
     @include fullWidthHeight;
-
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
     gap: 40px;
